stub `TaskHandler.Create()` and regen docs
